#755988 by killes: Render form id, build id and token as part of the form buttons context.
#756118 by killes: node_form_author.inc sets content regardless of content being present.
#783408 by hefox: Make sure empty arguments are properly translated to NULL when passed to Views.
#749398 by harijari: Properly support new column added for signatures in Drupal 6.13.

ctools 6.x-1.6 (2010-Jun-1)
==============
(No changes - 1.5 release was improperly tagged)

ctools 6.x-1.5 (2010-May-28)
==============
#804198: CTools AJAX framework did not work properly with javascript aggregation.
Handle forms passing through required contexts properly.
Add operation alter tooks to let modules add items to Page Manager pages.
Partial rollback of #711664 - central-hook-based plugin definition no longer defaults to FALSE, as this caused widespread unexpected behavior in modules using ctools plugins.
#708926: Remove dependency-busting call to panels_get_path().
Do not allow Views Content Pane displays to be selected by the legacy Views content connector; based on #791960.
#737434 by nealeyoung: Make the node_updated content_type plugin actually do what it advertises and output last change time.

ctools 6.x-1.4 (2010-May-19)
==============
#686764: Update page tokens to use actual page rendering mechanism rather than the tokens which causes them to appear as having content even when empty.
Retool the page elements to render last and not use the token method.
Allow themes to provide default pages so that Panels Everywhere enabled themes can provide layout variants for the site template.
Initial inclusion of the stylizer plugin to create user customizable styles from pre-configured base styles.
#708154: Update and Save would leave forms in an older state, causing some forms to lose data (particularly the Panels content form).
#467948 by hefox: Allow the vocabulary context to be used by the vocabulary selector access plugin.
#686052 by Scott Reynolds: Allow for cache warming. (See API.txt)