@@ -163,18 +163,6 @@ function ctools_add_js($file, $module = 'ctools', $dir = 'js') {
 }
 
 /**
- * Simple function to add a page id to Drupal.settings.CTools.
- */
-function ctools_add_page_id() {
-  static $page_id = NULL;
-  if (!isset($page_id)) {
-    $page_id = 'page-' . md5(mt_rand());
-    drupal_add_js(array('CTools' => array('pageId' => $page_id)), 'setting');
-  }
-  return $page_id;
-}
-
-/**
  * Implement hook_init to keep our global CSS at the ready.
  */
 function ctools_init() {
@@ -183,10 +171,6 @@ function ctools_init() {
   if (!empty($_REQUEST['ctools_ajax'])) {
     ini_set('display_errors', 0);
     register_shutdown_function('ctools_shutdown_handler');
-  }
-  else {
-    // Add a setting into the JS that identifies this page.
-    ctools_add_page_id();
   }
 
   // Clear plugin cache on the module page submit.
@@ -611,12 +595,13 @@ function ctools_preprocess_page(&$variables) {
     $variables['content'] = strtr($variables['content'], $tokens);
   }
 
+  $query_string = '?'. substr(variable_get('css_js_query_string', '0'), 0, 1);
   // Go through all the JS files being added to the page and catalog them.
   $js_files = array();
   foreach (drupal_add_js() as $type => $data) {
     if ($type != 'inline' && $type != 'setting') {
       foreach ($data as $path => $info) {
-        $js_files[$path] = TRUE;
+        $js_files[url($path) . $query_string] = TRUE;
       }
     }
   }
@@ -645,22 +630,21 @@ function ctools_preprocess_page(&$variables) {
         }
         // Only include the stylesheet if it exists.
         if (file_exists($file)) {
-          $css_files[$file] = TRUE;
+          $css_files[url($file) . $query_string] = TRUE;
         }
       }
     }
   }
 
-  // Cache the cataloged JS and CSS so they can be found by an ajax request.
-  $page_id = ctools_add_page_id();
-  $expire = CACHE_TEMPORARY;
-
-  // If the page cache is enabled, respect its cache lifetime.
-  // @TODO: do this for only user_is_anonymous()?
-  if (variable_get('cache', CACHE_DISABLED) != CACHE_DISABLED) {
-    $expire = variable_get('cache_lifetime', 0);
-  }
-  cache_set($page_id, array('js' => $js_files, 'css' => $css_files), 'cache', $expire);
+  // Add loaded JS and CSS information to the footer, so that an AJAX
+  // request knows if they are already loaded.
+  // For inline Javascript to validate as XHTML, all Javascript containing
+  // XHTML needs to be wrapped in CDATA. To make that backwards compatible
+  // with HTML 4, we need to comment out the CDATA-tag.
+  $loaded = array('CTools' => array('scripts' => $js_files, 'css' => $css_files));
+  $embed_prefix = "\n<!--//--><![CDATA[//><!--\n";
+  $embed_suffix = "\n//--><!]]>\n";
+  $variables['closure'].= '<script type="text/javascript">' . $embed_prefix . 'jQuery.extend(Drupal.settings, ' . drupal_to_js($loaded) . ");" . $embed_suffix . "</script>\n";
 }
 
 /**
