@@ -24,6 +24,7 @@ Improve the "Edit panel" tab so that Panels Everywhere can use a different name 
 #756118 by killes: node_form_author.inc sets content regardless of content being present.
 #783408 by hefox: Make sure empty arguments are properly translated to NULL when passed to Views.
 #749398 by harijari: Properly support new column added for signatures in Drupal 6.13.
+#815164 by DeFR: Replace fragile server side cache of aggregated .js and .css with more robust embedded .js communicating this information.
 
 ctools 6.x-1.6 (2010-Jun-1)
 ==============
